--- a/.changelog/v3.0.5.md
+++ b/.changelog/v3.0.5.md
@@ -2,8 +2,16 @@ simbot-mirai version: `3.0.0.preview.3.0-292.0.1-SNAPSHOT`
 
 ## 首版本
 此版本尚不完善，但是已经可以简单使用。工具内的部分说明还未补全，其中有关于cer证书的安装，此处先进行简单说明：
-> 由于
 
+> 在进行浏览器控制的时候，使用到了 selenium 和 browsermob-core 进行代理拦截请求并做处理。
+> 由于验证码的地址是https, 所以你可能需要安装一个证书来允许进行操作。
+> 更多参考：
+> - [browsermob-proxy#using-with-selenium](https://github.com/lightbody/browsermob-proxy#using-with-selenium)
+> - [browsermob-proxy#ssl-support](https://github.com/lightbody/browsermob-proxy#ssl-support)
+> - [browsermob-core/ca-certificate-rsa.cer](https://github.com/lightbody/browsermob-proxy/blob/master/browsermob-core/src/main/resources/sslSupport/ca-certificate-rsa.cer)
+> 
+> 考虑到使用这种公开的证书并不安全，建议在不再需要使用此工具的时候移除此证书，或者不通过此工具进行验证，而是自行手动通过验证。
+> 后续也许会考虑支持自定义证书。
 
 ## 其他说明
 #### 版本号
